# ansible_shed

./: .coveragerc  .gitignore  CLAUDE.md  README.md  ansible_shed.ini  ansible_shed.service  mypy.ini  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ansible_shed/: constants.py  main.py  shed.ini  shed.py
ansible_shed/cli/: main.py
ansible_shed/client/: __init__.py  config.py  http.py
ansible_shed/tests/: ansible_output.py  ansible_output_fixtures.py  api.py  base.py  client_cli.py  client_http.py  vault_pass.py  version_check_state.py
