[build-system]
requires = [
    "setuptools>=43",
    "wheel",
    "mypy>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
allow_untyped_globals = false
allow_redefinition = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
pretty = true
show_error_context = true
strict = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
