[build-system]
requires = [
    "setuptools>=43",
    "wheel",
    "mypy>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
allow_untyped_globals = false
allow_redefinition = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
pretty = true
show_error_context = true
strict = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true

[tool.ptr]
entry_point_module = "ansible_shed/main"
test_suite = "ansible_shed.tests.base"
test_suite_timeout = 300
required_coverage = { "ansible_shed/main.py" = 45, "ansible_shed/shed.py" = 36 }\
run_black = true
run_flake8 = true
run_mypy = true
run_usort = true
